# snlcopyright

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  quality.sh  style.sh
.github/workflows/: publish_to_pypi.yml  release.yml  tests.yml
config/: README.md
src/snlcopyright/: command_line.py  copyright.txt  copyright_crud.py
tests/: test_command_line.py  test_copyright.py
tests/files/: hello_world.py  module_with_copyright.py  module_without_copyright.py
tests/files/nested_files/: hello_world_nested.py
