# reference
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# PEP621
# https://peps.python.org/pep-0621/
#
# Python Packages
# https://py-pkgs.org/welcome


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snlcopyright"
version = "0.0.11"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
]
description = "Create, read, update, delete a copyright block in Python source code."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
]

# Optional dependencies video
# https://www.youtube.com/watch?v=yJyo-K7wW2g

[project.optional-dependencies]
dev = ["black==22.10.0", "flake8", "pytest", "pytest-cov"]

# Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
commands="snlcopyright.command_line:commands"
copyright="snlcopyright.copyright_crud:copyright"
copyright-info="snlcopyright.command_line:copyright_info"
copyright-show="snlcopyright.copyright_crud:text_block"
copyright-status="snlcopyright.copyright_crud:copyright_status"
copyright-version="snlcopyright.command_line:copyright_version"

[project.urls]
"Homepage" = "https://github.com/sandialabs/copyright"
"Bug Tracker" = "https://github.com/sandialabs/copyright/issues"
